# penguin_classifier

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  start_app_linux.sh  start_windows.bat
docs/: mkdocs.yml
docs/docs/: index.md
models/: pipeline.joblib
notebooks/: 01_initial_eda.ipynb
penguin_classifier/: __init__.py  dataset.py  features.py  plots.py
penguin_classifier/modeling/: predict.py  train.py
reports/: metrics.json  penguin_raw_data_profile.html
src/penguin_classifier/: app.py  config.py  dataset.py  features.py  plots.py
src/penguin_classifier/modeling/: predict.py  train.py
src/penguin_classifier/ui/: callbacks.py  layout.py
tests/: test_backend.py  test_frontend.py
