[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "penguin-classifier"
version = "0.0.1"
description = "A platform-independent machine learning application to classify Palmer penguins, designed for non-technical field usage."
authors = [
    { name = "Erik Reitsam" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "python-dotenv",
    "loguru",
    "numpy",
    "pandas",
    "scikit-learn",
    "palmerpenguins>=0.1.4,<0.2.0",
    "dash",
    "dash-bootstrap-components",
    "seaborn (>=0.10.0,<0.14.0)",
    "matplotlib (>=3.9.0,<3.10.0)",
]

[project.scripts]
penguin-app = "penguin_classifier.app:main"

[tool.poetry]
packages = [
    { include = "penguin_classifier", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
typer = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.group.eda.dependencies]
ipython = "*"
jupyterlab = "*"
notebook = "*"
matplotlib = "*"
tqdm = "*"
ipykernel = "^7.1.0"
ydata-profiling = "^4.18.0"

[tool.ruff]
line-length = 79
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["penguin_classifier"]
force-sort-within-sections = true